# fitbit-to-kml

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  download-tcx.py  dump-activities.py  get-auth.py  merge-kml.py  pyproject.toml  readme.md  renovate.json5  tcx-to-kml.py
.github/: copilot-instructions.md
.github/workflows/: ci_pre-commit.yaml  ci_python_lint_and_test.yaml  meta_cleanup.yaml  meta_zizmor.yaml
data/: .gitignore
docs/: auth.md
fitbit_to_kml/: __init__.py  activity.py  client.py  dump_utils.py  get_auth.py  merge_kml.py  tcx.py  tokens.py
tests/: test_activity_fetcher.py  test_client.py  test_dump_utils.py  test_main.py  test_merge_kml.py  test_tcx_downloader.py  test_tcx_to_kml.py  test_tokens.py
